[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Fonts/Pirata30_1.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/default_theme.theme" type="Theme" id=2]
[ext_resource path="res://Scenes/InterfaceScenes/PauseMenuScreen.gd" type="Script" id=3]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.160784, 0.262745, 0.623529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 400 )
color = Color( 0.054902, 0.0156863, 0.121569, 0.988235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -164.0
margin_right = 128.0
margin_bottom = 164.0
rect_min_size = Vector2( 256, 328 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/VBoxContainer"]
margin_right = 256.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Pause"
align = 1
valign = 1

[node name="ResumeButton" type="Button" parent="Background/VBoxContainer"]
margin_top = 85.0
margin_right = 256.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
text = "Resume"

[node name="SettingButton" type="Button" parent="Background/VBoxContainer"]
pause_mode = 2
margin_top = 145.0
margin_right = 256.0
margin_bottom = 195.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
text = "Settings"

[node name="QuitButton" type="Button" parent="Background/VBoxContainer"]
margin_top = 205.0
margin_right = 256.0
margin_bottom = 255.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
text = "QUIT"
[connection signal="pressed" from="Background/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
